--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^7.5.1",
     "@typegoose/typegoose": "^12.4.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/mongoose": "^5.11.97",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "globally": "^0.0.0",
     "mongoose": "^8.3.2",
     "nest": "^0.1.6",
@@ -44,10 +49,10 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.6.3",
+    "jest": "^29.7",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
+    "ts-jest": "^29.0",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
