--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^7.5.1",
     "@typegoose/typegoose": "^12.4.0",
     "@types/bcryptjs": "^2.4.6",
@@ -37,6 +38,8 @@
     "mongoose": "^8.3.2",
     "nest": "^0.1.6",
     "nestjs-typegoose": "^7.1.38",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -48,6 +51,7 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.10",
     "jest": "^29.7",
     "prettier": "^2.1.2",
