--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,8 +12,8 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        registry: docker.pkg.github.com
-        name: docker.pkg.github.com/scalette/nestTest/nestDocker
+        registry: ghcr.io
+        name: ghcr.io/scalette/nestTest/nestDocker
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         tags: "develop"
