--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@typegoose/typegoose": "^12.4.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
+    "app-root-path": "^3.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.6.0",
+    "fs-extra": "^11.2.0",
     "globally": "^0.0.0",
     "mongoose": "^8.3.2",
     "nest": "^0.1.6",
@@ -42,17 +47,23 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "sharp": "^0.33.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/app-root-path": "^1.2.8",
     "@types/express": "^4.17.8",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.10",
+    "@types/xml2js": "^0.4.14",
     "jest": "^29.7",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
