--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "date-fns": "^3.6.0",
     "fs-extra": "^11.2.0",
     "globally": "^0.0.0",
+    "graphile-worker": "^0.16.6",
     "mongoose": "^8.3.2",
     "nest": "^0.1.6",
+    "nestjs-graphile-worker": "^0.7.0",
     "nestjs-typegoose": "^7.1.38",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
