--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,14 @@ services:
       - 27017:27017
     volumes:
       - ./mongo-data-7.0:/data/db
+  postgres:
+    image: postgres:16.2-bullseye
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=default
+    ports:
+      - 5444:5432
+    volumes:
+      - ./postgres/data:/var/lib/postgresql/data
+      - ./postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
