--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@nestjs/common": "^7.5.1",
       "@nestjs/config": "^3.2.2",
       "@nestjs/core": "^7.5.1",
+      "@nestjs/cqrs": "^10.2.7",
       "@nestjs/jwt": "^10.2.0",
       "@nestjs/passport": "^10.0.3",
       "@nestjs/platform-express": "^7.5.1",
